# tap-newrelic

./: README.md  meltano.yml  pyproject.toml  tap-newrelic.sh
tap_newrelic/: streams.py  tap.py
tap_newrelic/tests/: __init__.py  test_core.py
