[tool.poetry]
name = "tap-newrelic"
version = "0.0.1"
description = "`tap-newrelic` is Singer tap for NewRelic, built with the Singer SDK."
authors = ["Charles Julian Knight"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.9,>=3.6"
requests = "^2.25.1"
singer-sdk = "^0.1.3"
inflection = "^0.5.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-newrelic = 'tap_newrelic.tap:cli'
